Changing configuration from env to yaml, and some stuff to be more compliant

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,7 @@ bin/*
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# Don't get the config.yml
+config.yml
