--- a/.promu.yml
+++ b/.promu.yml
@@ -1,16 +1,24 @@
+verbose: true
+go:
+  version: 1.19.5
+  cgo: false
 repository:
   path: github.com/Whyrl35/prometheus-saltstack-exporter
 build:
+  prefix: ./bin
   binaries:
-    - name: prometheus-salt-exporter
+    - name: prometheus-saltstack-exporter
+      path: .
   flags: -a -tags 'netgo static_build'
   ldflags: |
-    -X {{repoPath}}/vendor/github.com/prometheus/common/version.Version={{.Version}}
-    -X {{repoPath}}/vendor/github.com/prometheus/common/version.Revision={{.Revision}}
-    -X {{repoPath}}/vendor/github.com/prometheus/common/version.Branch={{.Branch}}
-    -X {{repoPath}}/vendor/github.com/prometheus/common/version.BuildUser={{user}}@{{host}}
-    -X {{repoPath}}/vendor/github.com/prometheus/common/version.BuildDate={{date "20060102-15:04:05"}}
+    -s
+    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.Version={{.Version}}
+    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.Revision={{.Revision}}
+    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.Branch={{.Branch}}
+    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.BuildUser={{user}}@{{host}}
+    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.BuildDate={{date "20060102-15:04:05"}}
 tarball:
+  prefix: .
   files:
     - LICENSE
     - README.md
