--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -11,12 +11,22 @@ options:
         - fix
         - perf
         - refactor
+        - ci
+        - docs
+        - revert
+        - style
+        - test
   commit_groups:
     title_maps:
       feat: Features
       fix: Bug Fixes
       perf: Performance Improvements
       refactor: Code Refactoring
+      ci: Continuous Integration
+      docs: Documentations
+      revert: Reverting commit
+      style: Code Styling
+      test: Tests
   header:
     pattern: "^(\\w*)(?:\\(([\\w\\$\\.\\-\\*\\s]*)\\))?\\:\\s(.*)$"
     pattern_maps:
