--- a/.drone.yml
+++ b/.drone.yml
@@ -10,9 +10,9 @@ steps:
       - name: deps
         path: /go
     commands:
-      - go install goimports
+      - go install golang.org/x/tools/cmd/goimports@latest
       - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.50.1
-      - go install -v github.com/go-critic/go-critic/cmd/gocritic@latest
+      - go install github.com/go-critic/go-critic/cmd/gocritic@latest
 
   - name: format
     image: golang:1.19
@@ -48,7 +48,7 @@ steps:
       - make build
 
 depends_on:
-  - lint
+  - validate
 
 ---
 kind: pipeline
@@ -66,4 +66,10 @@ steps:
         - failure
         - success
 depends_on:
-  - push
+  - build
+
+---
+kind: signature
+hmac: d9fecad40592f7dda24e3fd15d45f6af9b4650ec33b9cc4f23c255d0f9906a04
+
+...
