feat: Adding deb and rpm packages build

--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -5,33 +5,22 @@ info:
   repository_url: https://github.com/Whyrl35/prometheus-saltstack-exporter
 options:
   commits:
-    filters:
-      Type:
-        - feat
-        - fix
-        - perf
-        - refactor
-        - ci
-        - docs
-        - revert
-        - style
-        - test
+    # filters:
+    #   Type:
+    #     - feat
+    #     - fix
+    #     - perf
+    #     - refactor
   commit_groups:
-    title_maps:
-      feat: Features
-      fix: Bug Fixes
-      perf: Performance Improvements
-      refactor: Code Refactoring
-      ci: Continuous Integration
-      docs: Documentations
-      revert: Reverting commit
-      style: Code Styling
-      test: Tests
+    # title_maps:
+    #   feat: Features
+    #   fix: Bug Fixes
+    #   perf: Performance Improvements
+    #   refactor: Code Refactoring
   header:
-    pattern: "^(\\w*)(?:\\(([\\w\\$\\.\\-\\*\\s]*)\\))?\\:\\s(.*)$"
+    pattern: "^(\\w*)\\:\\s(.*)$"
     pattern_maps:
       - Type
-      - Scope
       - Subject
   notes:
     keywords:
