--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -5,23 +5,51 @@ info:
   repository_url: https://github.com/Whyrl35/prometheus-saltstack-exporter
 options:
   commits:
-    # filters:
-    #   Type:
-    #     - feat
-    #     - fix
-    #     - perf
-    #     - refactor
+    filters:
+      Type:
+        - feat
+        - fix
+        - perf
+        - refactor
+        - chore
+        - docs
+        - style
+        - perf
+        - test
   commit_groups:
-    # title_maps:
-    #   feat: Features
-    #   fix: Bug Fixes
-    #   perf: Performance Improvements
-    #   refactor: Code Refactoring
+    title_maps:
+      feat: Features
+      fix: Bug Fixes
+      perf: Performance Improvements
+      refactor: Code Refactoring
+      chore: Tasks
+      docs: Documentation
+      style: Code styling
+      test: Code Testing
   header:
     pattern: "^(\\w*)\\:\\s(.*)$"
     pattern_maps:
       - Type
       - Subject
+
+  issues:
+    prefix:
+      - #
+
+  refs:
+    actions:
+      - Closes
+      - Fixes
+
+  merges:
+    pattern: "^Merge branch '(\\w+)'$"
+    pattern_maps:
+      - Source
+
+  reverts:
+    pattern: "^Revert \"([\\s\\S]*)\"$"
+    pattern_maps:
+      - Header
   notes:
     keywords:
       - BREAKING CHANGE
