--- a/.promu.yml
+++ b/.promu.yml
@@ -12,16 +12,11 @@ build:
   flags: -a -tags 'netgo static_build'
   ldflags: |
     -s
-    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.Version={{.Version}}
-    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.Revision={{.Revision}}
-    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.Branch={{.Branch}}
-    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.BuildUser={{user}}@{{host}}
-    -X github.com/Whyrl35/prometheus-saltstack-exporter/vendor/github.com/prometheus/common/version.BuildDate={{date "20060102-15:04:05"}}
-    -X {{repoPath}}/version.Version={{.Version}}
-    -X {{repoPath}}/version.Revision={{.Revision}}
-    -X {{repoPath}}/version.Branch={{.Branch}}
-    -X {{repoPath}}/version.BuildUser={{user}}@{{host}}
-    -X {{repoPath}}/version.BuildDate={{date "20060102-15:04:05"}}
+    -X github.com/prometheus/common/version.Version={{.Version}}
+    -X github.com/prometheus/common/version.Revision={{.Revision}}
+    -X github.com/prometheus/common/version.Branch={{.Branch}}
+    -X github.com/prometheus/common/version.BuildUser={{user}}@{{host}}
+    -X github.com/prometheus/common/version.BuildDate={{date "20060102-15:04:05"}}
 tarball:
   prefix: .
   files:
